# Mitre-Report

./: .gitignore  LICENSE  README.md  Reporter.ps1  pyproject.toml  setup.py
reporter/: __init__.py  __main__.py  config.json  prompt.txt
reporter/modules/: report.py  wazuh.py
